hotspot/src/share/vm/runtime/arguments.hpp
@@ -312,6 +312,9 @@ class Arguments : AllStatic {
   // GC ergonomics
   static void set_ergonomics_flags();
   static void set_shared_spaces_flags();
+  // limits the given memory size by the maximum amount of memory this process is
+  // currently allowed to allocate or reserve.
+  static julong limit_by_allocatable_memory(julong size);
   // Setup HeapBaseMinAddress
   static void set_heap_base_min_address();
   // Setup heap size
